--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,4 +21,9 @@ add_executable(raylib_template
     src/audio.c
     src/timer.c
 )
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Os -s USE_GLFW=3 -s ASSERTIONS=1 -s WASM=1")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s ALLOW_MEMORY_GROWTH=1 --no-heap-copy")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s ERROR_ON_UNDEFINED_SYMBOLS=0 --shell-file C:/Users/Levertion/Documents/game-dev-club/jam-game/src/shell.html")
+set(CMAKE_EXECUTABLE_SUFFIX ".html")
 target_link_libraries(raylib_template PRIVATE raylib)
+set_target_properties(raylib_template PROPERTIES LINK_FLAGS "--preload-file C:/Users/Levertion/Documents/game-dev-club/jam-game/assets@assets")
